@@ -2544,7 +2544,7 @@
 	  the USB (device) driver on the PIC32 Ethernet Starter Kit.
 	* arch/mips/src/pic32mx/pic32mx_ethernet.c:  Verifed the PIC32 Ethernet
 	  driver on the PIC32 Starter Kit.  Status:  It is occasionally functional
-	  but no stable enough for use.
+	  but not stable enough for use.
 	* arch/arm/include/stm32, arch/arm/src/stm32:  Add general support for
 	  the STM32 F2 family. Contributed by Gary Teravskis,
 	* configs/stm3220g-eval:  Add support for the STMicro STM3220G-EVAL board.
@@ -2559,3 +2559,5 @@
 	  USB host driver with name changes only).
 	* arch/arm/src/stm32/chip/stm32_otgfs.h:  STM32 USB OTG FS register
 	  definitions (not complete on initial check-in).
+	* net/connect.c:  Add another low level, thread-independent socket interface
+	  for use within the OS.
